--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,10 @@ main {
   box-shadow: 0px 5px rgba(0,0,0,0.2);
 }
 
+.app input:focus{
+  outline: none;
+}
+
 ::placeholder{
   color: #f8f8f8;
 }
