--- a/src/index.css
+++ b/src/index.css
@@ -110,6 +110,10 @@ main {
 
 .weather-icon{
   text-align: center;
+  border-radius: 50%;
+  background-color: rgba(255,255,255,0.2);
+  width:120px;
+  margin: auto;
 }
 
 .date {
